# RSP3

./: .gitignore  CMakeLists.txt  DataHandler.cpp  DataHandler.h  Fold.cpp  Fullset.cpp  Fullset.h  README.md  Reductor.cpp  Reductor.h  main.cpp
datasets/Balance/: balance-ts1  balance-ts2  balance-ts3  balance-ts4  balance-ts5
datasets/Ecoli/: ecl-ts1  ecl-ts2  ecl-ts3  ecl-ts4  ecl-ts5
datasets/KDD_Cup/: kdd-te1  kdd-te2  kdd-te3  kdd-te4  kdd-te5
datasets/Landsat_Satellite/: ls-ts1  ls-ts2  ls-ts3  ls-ts4  ls-ts5
datasets/Letter_Image_Recognition/: lirn-ts1  lirn-ts2  lirn-ts3  lirn-ts4  lirn-ts5
datasets/MONK2/: mnk-ts1  mnk-ts2  mnk-ts3  mnk-ts4  mnk-ts5
datasets/Magic_Gamma_Telescope/: mgt-ts1  mgt-ts2  mgt-ts3  mgt-ts4  mgt-ts5
datasets/Pendigits/: pd-ts1  pd-ts2  pd-ts3  pd-ts4  pd-ts5
datasets/Phoneme/: ph-ts1  ph-ts2  ph-ts3  ph-ts4  ph-ts5
datasets/Pima/: pm-ts1  pm-ts2  pm-ts3  pm-ts4  pm-ts5
datasets/Shuttle/: sh-ts1  sh-ts2  sh-ts3  sh-ts4  sh-ts5
datasets/Texture/: txr-ts1  txr-ts2  txr-ts3  txr-ts4  txr-ts5
datasets/Twonorm/: twonorm-ts1  twonorm-ts2  twonorm-ts3  twonorm-ts4  twonorm-ts5
datasets/Yeast/: ys-ts1  ys-ts2  ys-ts3  ys-ts4  ys-ts5
qhull/: ConvexHull.hpp  QuickHull.cpp
rsp3/: CrossValidator.cpp  CrossValidator.h  Fold.h  Fullset.cpp  MDF.cpp  MDF.h  Point.cpp  Point.h  RandomIterator.cpp  RandomIterator.h  Reductor.cpp  Reductor.h  Subset.cpp  Subset.h
